# RemoteSensor

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
docs/: architecture-diagrams.md  architecture-graph.mmd  runtime-flow-graph.mmd
main/: CMakeLists.txt  RemoteSensors.cpp  config_store.h  defines.h  idf_component.yml  includes.h  webserver.cpp
main/mongoose/: mongoose_fs.c  mongoose_glue.c  mongoose_glue.h  mongoose_impl.c  mongoose_wizard.json
